# tester_project

./: .gitignore  CHANGELOG.md  CNAME  LICENCE.txt  README.md  env.yml  environment.yml  index.md  setup.cfg
.github/: ISSUE_TEMPLATE.md
.github/workflows/: create-release.yml  echoer.yml  release-docs.yml  release-drafter.yml  release-testing.yml  release.yml  rtest.yml  testing.yml
doc/source/: conf.py  index.rst
docs/: genindex.html  index.html  search.html
docs/doctrees/: environment.pickle  index.doctree
docs/html/: .buildinfo  objects.inv  searchindex.js
recipe/: meta.yaml
src/tester_project/: __init__.py
src/tester_project/test/: test_modulea.py
