[metadata]
name = tester_project
version = attr: tester_project.__version__
url = https://github.com/matthewgilbert/tester_project
author_email = matthew.gilbert12@gmail.com
description = A simple CI/CD test project
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keyboards = Bloomberg data blpapi

[options]
zip_safe = False
python_requires = >=3.6
install_requires =
    pandas
package_dir =
    =  src
packages = find:

[options.packages.find]
where = src


[bdist_wheel]
universal=1

[build-system]
requires =
  setuptools >= 40.9.0
  wheel
build-backend = setuptools.build_meta
